Feature: storage interface (S3, SMB, SFTP) (#24)
* Introduce unified storage facade and pluggable-backend skeleton

Adds a single StorageService entry point over a StorageBackend
interface so producers no longer reach for java.nio.file.Files
directly. LocalStorageBackend is the only implementation in this step;
SMB / SFTP / S3 implementations slot in behind the same interface in
later steps.

Concepts introduced:
- StorageScope sealed interface (Instance, Station, Account) replacing
  ad-hoc int-stationId arguments.
- StorageCategory enum carries scope kind, backend movability, quota
  mode, accepted MIME types, POSIX mode and access-time-LRU flags for
  every category that lands on disk (page files, KB files, board
  attachments, the seven image categories, documents, discovery key,
  map tile cache, demo avatars).
- StorageBackend / StorageBackendResolver / LocalStorageBackend /
  StoredStream / ObjectMetadata / BackendCapability / HealthStatus /
  StorageException / StorageUnavailableException for the pluggable
  backend layer.
- StorageService façade with byte[] and streaming overloads, inline
  SHA-256 digest, MIME-type validation, scope/category compatibility
  check and POSIX-mode application after write.

PageFileStorageService is reworked as a thin keying / variant adapter
over the new façade with a one-shot boot migration that moves uploads
from data/page-files/<uid>/... into the new
data/station/<uid>/page-files/... layout.

Quota tracking moves from the historical PAGE_IMAGES label to
PAGE_FILES; patch_19 renames the rows in station_storage_usage.
Frontend storage view labels the new categories and excludes
unenforced ones from the chart.

* Route KB files and board attachments through the storage façade

Pulls the last two ad-hoc per-domain disk producers through the unified
StorageService and removes their hand-rolled file ops.

KB files
- KbFileStorageService now keys on (stationId, fileId) and delegates
  every store / read / delete / presentation-pd